--- a/notebooks/CatsVsDogs_PreTrainedModel(UsingAugmentation).ipynb
+++ b/notebooks/CatsVsDogs_PreTrainedModel(UsingAugmentation).ipynb
@@ -17,6 +17,9 @@
     }
    ],
    "source": [
+    "import os\n",
+    "os.ENVIRON['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
+    "\n",
     "import tensorflow as tf\n",
     "import pathlib\n",
     "\n",
