--- a/notebooks/CatsVsDogs(DistributeOn2GPUs_WithVGG16_FineTuning).ipynb
+++ b/notebooks/CatsVsDogs(DistributeOn2GPUs_WithVGG16_FineTuning).ipynb
@@ -8,6 +8,8 @@
    "outputs": [],
    "source": [
     "import pathlib\n",
+    "import os\n",
+    "os.environ['TF_PCC_MIN_LOG_LEVEL'] = '3'\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -4881,7 +4883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
