--- a/notebooks/CatsVsDogs(DistributeOn2GPUs_WithVGG16_FineTuning).ipynb
+++ b/notebooks/CatsVsDogs(DistributeOn2GPUs_WithVGG16_FineTuning).ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "654a3c01-783b-48e2-9d59-81d268ba805f",
    "metadata": {},
    "outputs": [],
@@ -41,10 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "25d56f57-382a-4319-8a21-8a0e18ddd5b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:GPU:0', '/job:localhost/replica:0/task:0/device:GPU:1')\n"
+     ]
+    }
+   ],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()"
    ]
@@ -63,10 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c384be72-d94d-4457-a2ff-1be5ebb6b42d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of devices: 2\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Number of devices: {strategy.num_replicas_in_sync}\")"
    ]
@@ -81,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c46c77a0-7cc1-4cf4-afd4-2504be593159",
    "metadata": {},
    "outputs": [],
@@ -91,10 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "34ad39a4-37d0-45da-9d98-5a34882fc094",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2000 files belonging to 2 classes.\n",
+      "Found 1000 files belonging to 2 classes.\n",
+      "Found 2000 files belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "tr_d = image_dataset_from_directory(\n",
     "    w_dir / 'train',\n",
@@ -125,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "271fecb2-b7ca-4efb-9696-ed69823a33b4",
    "metadata": {},
    "outputs": [],
@@ -166,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "45ede4a6-9668-4d73-bb15-4496c4580c5b",
    "metadata": {},
    "outputs": [],
@@ -202,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "adf4340d-753c-42a6-a087-483c7aa206a2",
    "metadata": {},
    "outputs": [],
@@ -219,12 +245,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "264a74bf-9593-4ea1-b301-9ab5193615aa",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/52\n",
+      "INFO:tensorflow:batch_all_reduce: 4 all-reduces with algorithm = nccl, num_packs = 1\n",
+      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+      "INFO:tensorflow:batch_all_reduce: 4 all-reduces with algorithm = nccl, num_packs = 1\n",
+      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+      "63/63 [==============================] - ETA: 0s - loss: 17.1097 - accuracy: 0.8960INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
+      "63/63 [==============================] - 20s 185ms/step - loss: 17.1097 - accuracy: 0.8960 - val_loss: 3.9387 - val_accuracy: 0.9770\n",
+      "Epoch 2/52\n",
+      "63/63 [==============================] - 8s 121ms/step - loss: 6.8207 - accuracy: 0.9450 - val_loss: 5.1661 - val_accuracy: 0.9620\n",
+      "Epoch 3/52\n",
+      "63/63 [==============================] - 8s 120ms/step - loss: 4.4604 - accuracy: 0.9625 - val_loss: 4.1570 - val_accuracy: 0.9670\n",
+      "Epoch 4/52\n",
+      "63/63 [==============================] - 8s 124ms/step - loss: 4.6375 - accuracy: 0.9620 - val_loss: 4.7768 - val_accuracy: 0.9750\n",
+      "Epoch 5/52\n",
+      "63/63 [==============================] - 8s 128ms/step - loss: 4.1309 - accuracy: 0.9645 - val_loss: 3.8703 - val_accuracy: 0.9790\n",
+      "Epoch 6/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 3.4265 - accuracy: 0.9705 - val_loss: 4.6285 - val_accuracy: 0.9740\n",
+      "Epoch 7/52\n",
+      "63/63 [==============================] - 8s 125ms/step - loss: 2.4167 - accuracy: 0.9770 - val_loss: 4.1277 - val_accuracy: 0.9770\n",
+      "Epoch 8/52\n",
+      "63/63 [==============================] - 8s 125ms/step - loss: 3.5884 - accuracy: 0.9725 - val_loss: 3.9885 - val_accuracy: 0.9810\n",
+      "Epoch 9/52\n",
+      "63/63 [==============================] - 8s 134ms/step - loss: 2.9276 - accuracy: 0.9705 - val_loss: 3.8561 - val_accuracy: 0.9760\n",
+      "Epoch 10/52\n",
+      "63/63 [==============================] - 8s 132ms/step - loss: 3.0886 - accuracy: 0.9775 - val_loss: 3.6897 - val_accuracy: 0.9770\n",
+      "Epoch 11/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 2.2004 - accuracy: 0.9755 - val_loss: 3.7680 - val_accuracy: 0.9780\n",
+      "Epoch 12/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 2.3283 - accuracy: 0.9775 - val_loss: 4.2293 - val_accuracy: 0.9810\n",
+      "Epoch 13/52\n",
+      "63/63 [==============================] - 8s 124ms/step - loss: 2.3557 - accuracy: 0.9725 - val_loss: 6.1020 - val_accuracy: 0.9710\n",
+      "Epoch 14/52\n",
+      "63/63 [==============================] - 8s 134ms/step - loss: 2.4412 - accuracy: 0.9690 - val_loss: 3.5372 - val_accuracy: 0.9810\n",
+      "Epoch 15/52\n",
+      "63/63 [==============================] - 8s 132ms/step - loss: 1.8057 - accuracy: 0.9780 - val_loss: 3.6399 - val_accuracy: 0.9790\n",
+      "Epoch 16/52\n",
+      "63/63 [==============================] - 8s 128ms/step - loss: 2.1512 - accuracy: 0.9745 - val_loss: 2.4870 - val_accuracy: 0.9810\n",
+      "Epoch 17/52\n",
+      "63/63 [==============================] - 8s 125ms/step - loss: 1.8678 - accuracy: 0.9775 - val_loss: 4.1200 - val_accuracy: 0.9740\n",
+      "Epoch 18/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 0.9685 - accuracy: 0.9840 - val_loss: 2.5977 - val_accuracy: 0.9790\n",
+      "Epoch 19/52\n",
+      "63/63 [==============================] - 8s 128ms/step - loss: 0.7872 - accuracy: 0.9880 - val_loss: 2.5165 - val_accuracy: 0.9810\n",
+      "Epoch 20/52\n",
+      "63/63 [==============================] - 8s 127ms/step - loss: 1.3835 - accuracy: 0.9820 - val_loss: 3.4435 - val_accuracy: 0.9770\n",
+      "Epoch 21/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 1.7053 - accuracy: 0.9765 - val_loss: 2.8692 - val_accuracy: 0.9780\n",
+      "Epoch 22/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 1.0616 - accuracy: 0.9840 - val_loss: 3.5170 - val_accuracy: 0.9750\n",
+      "Epoch 23/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 0.8191 - accuracy: 0.9870 - val_loss: 2.6812 - val_accuracy: 0.9810\n",
+      "Epoch 24/52\n",
+      "63/63 [==============================] - 8s 132ms/step - loss: 1.0311 - accuracy: 0.9870 - val_loss: 2.4376 - val_accuracy: 0.9810\n",
+      "Epoch 25/52\n",
+      "63/63 [==============================] - 8s 128ms/step - loss: 1.2557 - accuracy: 0.9845 - val_loss: 3.2632 - val_accuracy: 0.9800\n",
+      "Epoch 26/52\n",
+      "63/63 [==============================] - 8s 132ms/step - loss: 0.9188 - accuracy: 0.9845 - val_loss: 2.3451 - val_accuracy: 0.9800\n",
+      "Epoch 27/52\n",
+      "63/63 [==============================] - 8s 125ms/step - loss: 1.1322 - accuracy: 0.9850 - val_loss: 2.3631 - val_accuracy: 0.9820\n",
+      "Epoch 28/52\n",
+      "63/63 [==============================] - 8s 130ms/step - loss: 1.0145 - accuracy: 0.9840 - val_loss: 2.0934 - val_accuracy: 0.9810\n",
+      "Epoch 29/52\n",
+      "63/63 [==============================] - 8s 128ms/step - loss: 0.9165 - accuracy: 0.9845 - val_loss: 3.0197 - val_accuracy: 0.9730\n",
+      "Epoch 30/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 0.8367 - accuracy: 0.9855 - val_loss: 2.8415 - val_accuracy: 0.9760\n",
+      "Epoch 31/52\n",
+      "63/63 [==============================] - 8s 130ms/step - loss: 0.9797 - accuracy: 0.9830 - val_loss: 2.3061 - val_accuracy: 0.9790\n",
+      "Epoch 32/52\n",
+      "63/63 [==============================] - 8s 132ms/step - loss: 0.7081 - accuracy: 0.9885 - val_loss: 1.8977 - val_accuracy: 0.9810\n",
+      "Epoch 33/52\n",
+      "63/63 [==============================] - 8s 125ms/step - loss: 0.9591 - accuracy: 0.9830 - val_loss: 1.9018 - val_accuracy: 0.9800\n",
+      "Epoch 34/52\n",
+      "63/63 [==============================] - 8s 127ms/step - loss: 0.6603 - accuracy: 0.9845 - val_loss: 3.2779 - val_accuracy: 0.9720\n",
+      "Epoch 35/52\n",
+      "63/63 [==============================] - 8s 125ms/step - loss: 1.4923 - accuracy: 0.9785 - val_loss: 2.1421 - val_accuracy: 0.9760\n",
+      "Epoch 36/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 0.7420 - accuracy: 0.9870 - val_loss: 3.2714 - val_accuracy: 0.9720\n",
+      "Epoch 37/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 0.5481 - accuracy: 0.9865 - val_loss: 1.9957 - val_accuracy: 0.9790\n",
+      "Epoch 38/52\n",
+      "63/63 [==============================] - 8s 128ms/step - loss: 0.5668 - accuracy: 0.9885 - val_loss: 2.4038 - val_accuracy: 0.9810\n",
+      "Epoch 39/52\n",
+      "63/63 [==============================] - 8s 126ms/step - loss: 0.6944 - accuracy: 0.9850 - val_loss: 2.1624 - val_accuracy: 0.9810\n",
+      "Epoch 40/52\n",
+      "63/63 [==============================] - 8s 127ms/step - loss: 0.6136 - accuracy: 0.9855 - val_loss: 2.6766 - val_accuracy: 0.9770\n",
+      "Epoch 41/52\n",
+      "63/63 [==============================] - 8s 125ms/step - loss: 0.6571 - accuracy: 0.9865 - val_loss: 2.4652 - val_accuracy: 0.9760\n",
+      "Epoch 42/52\n",
+      "63/63 [==============================] - 8s 127ms/step - loss: 0.4404 - accuracy: 0.9890 - val_loss: 2.5362 - val_accuracy: 0.9760\n",
+      "Epoch 43/52\n",
+      "63/63 [==============================] - 8s 129ms/step - loss: 0.5436 - accuracy: 0.9875 - val_loss: 2.4270 - val_accuracy: 0.9810\n",
+      "Epoch 44/52\n",
+      "63/63 [==============================] - 8s 127ms/step - loss: 0.4702 - accuracy: 0.9910 - val_loss: 2.0653 - val_accuracy: 0.9750\n",
+      "Epoch 45/52\n",
+      "63/63 [==============================] - 8s 132ms/step - loss: 0.4474 - accuracy: 0.9860 - val_loss: 1.4967 - val_accuracy: 0.9830\n",
+      "Epoch 46/52\n",
+      "63/63 [==============================] - 8s 129ms/step - loss: 0.5138 - accuracy: 0.9895 - val_loss: 1.6475 - val_accuracy: 0.9790\n",
+      "Epoch 47/52\n",
+      "63/63 [==============================] - 8s 128ms/step - loss: 0.8834 - accuracy: 0.9845 - val_loss: 1.8493 - val_accuracy: 0.9790\n",
+      "Epoch 48/52\n",
+      "63/63 [==============================] - 8s 124ms/step - loss: 0.3415 - accuracy: 0.9905 - val_loss: 1.9903 - val_accuracy: 0.9840\n",
+      "Epoch 49/52\n",
+      "63/63 [==============================] - 8s 131ms/step - loss: 0.6790 - accuracy: 0.9890 - val_loss: 1.3245 - val_accuracy: 0.9850\n",
+      "Epoch 50/52\n",
+      "63/63 [==============================] - 8s 125ms/step - loss: 0.6241 - accuracy: 0.9885 - val_loss: 1.9709 - val_accuracy: 0.9780\n",
+      "Epoch 51/52\n",
+      "63/63 [==============================] - 8s 124ms/step - loss: 0.3379 - accuracy: 0.9900 - val_loss: 2.0275 - val_accuracy: 0.9790\n",
+      "Epoch 52/52\n",
+      "63/63 [==============================] - 8s 125ms/step - loss: 0.2495 - accuracy: 0.9925 - val_loss: 3.9888 - val_accuracy: 0.9670\n"
+     ]
+    }
+   ],
    "source": [
     "callbacks = [ \n",
     "    keras.callbacks.ModelCheckpoint(\n",
